trying to fix issue on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -176,7 +176,6 @@ a.disabled:hover {
   }
 
   a {
-    -webkit-backface-visibility: hidden;
     display: block;
     color: inherit;
     text-decoration: none;
